2009-05-12  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        instanceof should throw if the constructor being tested does not implement
        'HasInstance" (i.e. is a function).  Instead we were returning false.

        * interpreter/Interpreter.cpp:
        (JSC::isInvalidParamForIn):
        (JSC::isInvalidParamForInstanceOf):
        (JSC::Interpreter::privateExecute):
        * jit/JITStubs.cpp:
        (JSC::JITStubs::cti_op_instanceof):
        * tests/mozilla/ecma_2/instanceof/instanceof-003.js:
            Fix broken test case.
        * tests/mozilla/ecma_2/instanceof/regress-7635.js:
            Remove broken test case (was an exact duplicate of a test in instanceof-003.js).

2009-05-12  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Improve function call forwarding performance

        Make creation of the Arguments object occur lazily, so it
        is not necessarily created for every function that references
        it.  Then add logic to Function.apply to allow it to avoid
        allocating the Arguments object at all.  Helps a lot with
        the function forwarding/binding logic in jQuery, Prototype,
        and numerous other JS libraries.

        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::dump):
        * bytecode/Opcode.h:
        * bytecompiler/BytecodeGenerator.cpp:
        (JSC::BytecodeGenerator::BytecodeGenerator):
        (JSC::BytecodeGenerator::registerFor):
        (JSC::BytecodeGenerator::willResolveToArguments):
        (JSC::BytecodeGenerator::uncheckedRegisterForArguments):
        (JSC::BytecodeGenerator::createArgumentsIfNecessary):
        (JSC::BytecodeGenerator::emitCallEval):
        (JSC::BytecodeGenerator::emitPushScope):
        * bytecompiler/BytecodeGenerator.h:
        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):
        (JSC::Interpreter::retrieveArguments):
        * jit/JIT.cpp: