@@ -112,6 +112,16 @@ namespace JSC {
     }
 
     // ECMA 11.9.3
+    ALWAYS_INLINE bool JSValue::strictEqualSlowCaseInline(JSValue v1, JSValue v2)
+    {
+        ASSERT(!JSImmediate::isEitherImmediate(v1, v2));
+
+        if (v1.asCell()->isString() && v2.asCell()->isString())
+            return asString(v1)->value() == asString(v2)->value();
+
+        return v1 == v2;
+    }
+
     inline bool JSValue::strictEqual(JSValue v1, JSValue v2)
     {
         if (JSImmediate::areBothImmediateIntegerNumbers(v1, v2))
@@ -123,17 +133,7 @@ namespace JSC {
         if (JSImmediate::isEitherImmediate(v1, v2))
             return v1 == v2;
 
-        return strictEqualSlowCase(v1, v2);
-    }
-
-    ALWAYS_INLINE bool JSValue::strictEqualSlowCaseInline(JSValue v1, JSValue v2)
-    {
-        ASSERT(!JSImmediate::isEitherImmediate(v1, v2));
-
-        if (v1.asCell()->isString() && v2.asCell()->isString())
-            return asString(v1)->value() == asString(v2)->value();
-
-        return v1 == v2;
+        return strictEqualSlowCaseInline(v1, v2);
     }
 
     inline bool jsLess(CallFrame* callFrame, JSValue v1, JSValue v2)
